change size of buton on mobile-menu, bug fixes

--- a/css/styles-light.css
+++ b/css/styles-light.css
@@ -115,10 +115,10 @@ body {
 
 @-webkit-keyframes drop {
   from {
-    -webkit-height: 2.4rem;
+    height: 2.4rem;
   }
   to {
-    -webkit-height: 100%;
+    height: 100%;
   }
 }
 
@@ -426,10 +426,10 @@ a {
 
 @-webkit-keyframes fade {
   from {
-    opacity: .1;
+    -webkit-opacity: .1;
   }
   to {
-    opacity: .6;
+    -webkit-opacity: .6;
   }
 }
 
