--- a/css/styles.scss
+++ b/css/styles.scss
@@ -120,15 +120,26 @@ body{
                 }
 
                 @-webkit-keyframes drop {
-                    from{-webkit-height:2.4rem;}
-                    to{-webkit-height:100%}
+                    from{height:2.4rem;}
+                    to{height:100%}
                 }
 
                 @-webkit-keyframes fade_in {
-                    from{-webkit-opacity:0;}
-                    50%{-webkit-opacity:0;}
-                    to{-webkit-opacity:1;}
-                }                
+                    from{opacity:0;}
+                    50%{opacity:0;}
+                    to{opacity:1;}
+                }   
+                
+                // @-webkit-keyframes drop {
+                //     from{-webkit-height:2.4rem;}
+                //     to{-webkit-height:100%}
+                // }
+
+                // @-webkit-keyframes fade_in {
+                //     from{-webkit-opacity:0;}
+                //     50%{-webkit-opacity:0;}
+                //     to{-webkit-opacity:1;}
+                // } 
 
                 .dropdown{
                     display: none;
@@ -179,7 +190,6 @@ body{
                         grid-row: 8;
                         display: flex;
                         flex-direction: row;
-                        justify-content: space-between;
                         animation-name: fade_in;
                         animation-duration: 0.7s;
                         -webkit-animation-name: fade_in;
@@ -187,14 +197,14 @@ body{
 
                         .set_btn{
                             height: 2.4rem;
-                            width: 40%;
+                            width: 20%;
                             padding-left:auto;
                             padding-right:auto;
                             color: $text_main;
                             background-color: $background;
                             border: 1px solid $text_main;
                             outline: none;
-                            margin: 0;
+                            margin: 0 1rem 0 0;
                             cursor: pointer;
 
                             img{
@@ -358,7 +368,6 @@ a{
 }
 
 .fade{
-    //fade animation for transparent blocks in carousel
     animation-name: fade;
     animation-duration: 1.5s;
     -webkit-animation-name: fade;
